--- a/police/igp/addFine.html
+++ b/police/igp/addFine.html
@@ -59,42 +59,27 @@
                     </div>
                     <form action="#" id="form" class="form">
                         <div class="form-control">
-                            <label for="name">Name</label>
-                            <input type="text" placeholder="eg: Suraif Muhammad" id="name" />
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-exclamation-circle"></i>
-                            <small>Error message</small>
-                        </div>
-                        <div class="form-control">
-                            <label for="police_id">Police_ID</label>
-                            <input type="text" placeholder="eg: 7109827" id="police_id" />
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-exclamation-circle"></i>
-                            <small>Error message</small>
-                        </div>
-                        <div class="form-control">
-                            <label for="nic">NIC</label>
-                            <input type="text" placeholder="eg: 200019292837" id="nic" />
-                            <i class="fas fa-check-circle"></i>
-                            <i class="fas fa-exclamation-circle"></i>
-                            <small>Error message</small>
-                        </div>
-                        <div class="form-control">
-                            <label for="rankOptions">Rank</label>
-                            <div class="options" id="rankOptions">
-                                <div class="hide-option option" id="hide-rankOption">Select the rank</div>
+                            <label for="fineTypeOptions">Fine Type</label>
+                            <div class="options" id="fineTypeOptions">
+                                <div class="hide-option option" id="hide-fineTypeOption">Select the rank</div>
                                 <i class="fas fa-check-circle"></i>
                                 <i class="fas fa-exclamation-circle"></i>
                             </div>
                             <small>Error message</small>
                         </div>
+                        
                         <div class="form-control">
-                            <label for="police_stationOptions">Police Station</label>
-                            <div class="options" id="police_stationOptions">
-                                <div class="hide-option option" id="hide-police_stationOption">Select the Police Station</div>
-                                <i class="fas fa-check-circle"></i>
-                                <i class="fas fa-exclamation-circle"></i>
-                            </div>
+                            <label for="user_id">User_ID</label>
+                            <input type="text" placeholder="eg: 200026002119" id="user_id" />
+                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-exclamation-circle"></i>
+                            <small>Error message</small>
+                        </div>
+                        <div class="form-control">
+                            <label for="fineAmount">Fine Amount</label>
+                            <input type="text" placeholder="eg: 5000" id="fineAmount" />
+                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-exclamation-circle"></i>
                             <small>Error message</small>
                         </div>
                         <button>Submit</button>
