--- a/avishi_user/complaint/index.html
+++ b/avishi_user/complaint/index.html
@@ -15,30 +15,30 @@
             <p class="logo"><b>NTSF</b></p>
         </div>
         <p class="tagline">National Traffic Spot Fine System</p>
-        <button class="main">IGP Dashboard</button>
+        <button class="main">User Dashboard</button>
         <div class="clear"></div>
         <ul class="menu">
             <a href="">
                 <i class="fa fa-dashboard"></i>
-                View Policeman
+                View Fines
             </a>
             <br>
             <a href="">
                 <i class="fa fa-tasks"></i>
-                Add Policeman
+                Add Complaints
             </a>
             <a href="">
                 <i class="fa fa-book"></i>
-                View Reports
+                View Complaints
             </a>
             <a href="">
                 <i class="fa fa-newspaper-o"></i>
-                News
-            </a>
-            <a href="">
-                <i class="fa fa-money"></i>
                 Logout
             </a>
+            <!-- <a href="">
+                <i class="fa fa-money"></i>
+                Logout
+            </a> -->
         </ul>
     </div>
     
@@ -46,7 +46,7 @@
     <div class="dashboard-heading">
         <div class="panel">
             <div ng-app="app" ng-controller="coin">
-                <p class="btc-price">Suraif Muhammad</p>
+                <p class="btc-price">Avishi Ganepola</p>
             </div>
         </div>
     
@@ -55,24 +55,24 @@
             <div class="formBody">
                 <div class="container">
                     <div class="formHeader">
-                        <h2>Add Policeman</h2>
+                        <h2>Add Complaint</h2>
                     </div>
                     <form action="#" id="form" class="form">
                         <div class="form-control">
-                            <label for="name">Name</label>
-                            <input type="text" placeholder="eg: Suraif Muhammad" id="name" />
+                            <label for="name">Title</label>
+                            <input type="text" placeholder="" id="title" />
                             <i class="fas fa-check-circle"></i>
                             <i class="fas fa-exclamation-circle"></i>
                             <small>Error message</small>
                         </div>
                         <div class="form-control">
-                            <label for="police_id">Police_ID</label>
-                            <input type="text" placeholder="eg: 7109827" id="police_id" />
+                            <label for="police_id">Description</label>
+                            <input type="text" placeholder="" id="description" />
                             <i class="fas fa-check-circle"></i>
                             <i class="fas fa-exclamation-circle"></i>
                             <small>Error message</small>
                         </div>
-                        <div class="form-control">
+                        <!-- <div class="form-control">
                             <label for="nic">NIC</label>
                             <input type="text" placeholder="eg: 200019292837" id="nic" />
                             <i class="fas fa-check-circle"></i>
@@ -96,8 +96,9 @@
                                 <i class="fas fa-exclamation-circle"></i>
                             </div>
                             <small>Error message</small>
-                        </div>
+                        </div> -->
                         <button>Submit</button>
+                        <button id="cancel-button">Cancel</button>
                     </form>
                 </div>
             </div>
