--- a/avishi_user/complaint/view_complaint.html
+++ b/avishi_user/complaint/view_complaint.html
@@ -7,12 +7,12 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
-          href="/resources/css/police/igp/viewFine.css">
+          href="../fine/view_fine.css">
+
     <title>Document</title>
 </head>
 
-<body onload="loadComplaintDetails()">
-
+<body onload="loadFineDetails()">
     <!-- Repeating side bar starts from here -->
 
     <body>
@@ -29,20 +29,20 @@
             <button class="main">User Dashboard</button>
             <div class="clear"></div>
             <ul class="menu">
-                <a href="">
+                <a href="../fine/view_fine.html">
                     <i class="fa fa-dashboard"></i>
                     View Fines
                 </a>
                 <br>
-                <a href="">
+                <a href="./add_complaint.html">
                     <i class="fa fa-tasks"></i>
                     Add Complaints
                 </a>
-                <a href="">
+                <a href="./view_complaint.html">
                     <i class="fa fa-book"></i>
                     View Complaints
                 </a>
-                <a href="">
+                <a href="../login/login.html">
                     <i class="fa fa-newspaper-o"></i>
                     Logout
                 </a>
@@ -54,7 +54,9 @@
             <div class="panel">
                 <div ng-app="app"
                      ng-controller="coin">
-                    <p class="btc-price">Avishi Ganepola</p>
+                    <a href="#">
+                        <p class="btc-price">Avishi Ganepola</p>
+                    </a>
                 </div>
             </div>
         </div>
@@ -63,6 +65,7 @@
         <!-- Dashbboard cards -->
         <div class="all">
             <div class="container">
+                <h1>Fines Details</h1>
                 <div class="tableSection">
                     <table class="rwd-table"
                            id="table">
@@ -81,7 +84,7 @@
                 </div>
             </div>
         </div>
-        <script src="/resources/js/police/policeman/viewFine.js"></script>
+        <script src="./view_complaint.js"></script>
     </body>
 
 </html>
