--- a/avishi_user/complaint/add_complaint.html
+++ b/avishi_user/complaint/add_complaint.html
@@ -9,7 +9,7 @@
     <!-- <link rel="stylesheet"
           href="../../resources/css/police/igp/addPoliceman.css"> -->
     <link rel="stylesheet"
-          href="../fine/view_fine.css">
+          href="./add_complaint.css">
     <link rel="stylesheet"
           href="https://kit.fontawesome.com/251590f28b.css"
           crossorigin="anonymous">
