--- a/avishi_user/fine/view_fine.html
+++ b/avishi_user/fine/view_fine.html
@@ -36,7 +36,7 @@
             <br>
             <a href="../complaint/add_complaint.html">
                 <i class="fa fa-tasks"></i>
-                Add Complaints
+                Add Complaint
             </a>
             <a href="../complaint/view_complaint.html">
                 <i class="fa fa-book"></i>
