--- a/police/igp/addPoliceman.html
+++ b/police/igp/addPoliceman.html
@@ -30,11 +30,11 @@
                 <i class="fa fa-tasks"></i>
                 Add Policeman
             </a>
-            <a href="">
+            <a href="../igp/viewPoliceStation.html">
                 <i class="fa fa-book"></i>
                 View Police Station
             </a>
-            <a href="">
+            <a href="../igp/addPoliceStation.html">
                 <i class="fa fa-newspaper-o"></i>
                 Add Police Station
             </a>
