--- a/police/igp/viewPoliceman.html
+++ b/police/igp/viewPoliceman.html
@@ -27,11 +27,11 @@
                 <i class="fa fa-tasks"></i>
                 Add Policeman
             </a>
-            <a href="">
+            <a href="../igp/viewPoliceman.html">
                 <i class="fa fa-book"></i>
                 View Police Station
             </a>
-            <a href="">
+            <a href="../igp/addPoliceStation.html">
                 <i class="fa fa-newspaper-o"></i>
                 Add Police Station
             </a>
