--- a/police/igp/addPoliceStation.html
+++ b/police/igp/addPoliceStation.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://kit.fontawesome.com/251590f28b.css" crossorigin="anonymous">
     <link rel="stylesheet"
 		  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>Add Police Station</title>
 </head>
 <body>
     <div class="DashBoardOption">
