--- a/user_service/index.html
+++ b/user_service/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport"
             content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet"
-            href="/resources/css/main.css">
+            href="resources/css/main.css">
       <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
       <link rel="stylesheet"
@@ -19,7 +19,7 @@
             type="image/x-icon"
             href="/resources/icons/favicon.ico">
       <script type="module"
-              src="./script.js"></script>
+              src="#"></script>
 
 </head>
 
@@ -38,24 +38,28 @@
                   <button class="main">User Dashboard</button></a>
             <div class="clear"></div>
             <ul class="menu">
-                  <a href="./user/fines/index.html">
-                        <i class="fa-solid fa-file-invoice"></i>
-                        View Fines
-                  </a>
-                  </br>
-                  <a href="./user/complaint/add/index.html">
-                        <i class="fa-solid fa-plus"></i>
-                        Add Complaint
-                  </a>
-                  <a href="./user/complaint/view/index.html">
-                        <i class="fa-solid fa-layer-group"></i>
-                        View Complaints
-                  </a>
-                  <a href="./user/login/index.html">
-                        <i class="fa-solid fa-right-from-bracket"></i>
-                        Logout
-                  </a>
-            </ul>
+                  <a href="./index.html">
+                        <button class="main">User Dashboard</button></a>
+                  <div class="clear"></div>
+                  <ul class="menu">
+                        <a href="./user/fines/index.html">
+                              <i class="fa-solid fa-file-invoice"></i>
+                              View Fines
+                        </a>
+                        </br>
+                        <a href="./user/complaint/add/index.html">
+                              <i class="fa-solid fa-plus"></i>
+                              Add Complaint
+                        </a>
+                        <a href="./user/complaint/view/index.html">
+                              <i class="fa-solid fa-layer-group"></i>
+                              View Complaints
+                        </a>
+                        <a href="./user/login/index.html">
+                              <i class="fa-solid fa-right-from-bracket"></i>
+                              Logout
+                        </a>
+                  </ul>
       </div>
 
       <!-- Dashboard heading -->
