--- a/user_service/user/fines/index.html
+++ b/user_service/user/fines/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
-          href="/resources/css/main.css">
+          href="./main.css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet"
@@ -35,7 +35,7 @@
             <p class="logo"><b class="app-name">NTSF</b></p>
         </div>
         <p class="tagline">National Traffic Spot Fine System</p>
-        <a href="../index.html">
+        <a href="../../index.html">
             <button class="main">User Dashboard</button></a>
         <div class="clear"></div>
         <ul class="menu">
