--- a/police/igp/updatePoliceman.html
+++ b/police/igp/updatePoliceman.html
@@ -66,7 +66,7 @@
                         </div>
                         <div class="form-control">
                             <label for="police_id">Police_ID</label>
-                            <input type="text" placeholder="eg: 7109827" id="police_id" value=""/>
+                            <input type="text" placeholder="eg: 7109827" id="police_id" value="" readonly/>
                             <!-- <i class="fas fa-check-circle"></i>
                             <i class="fas fa-exclamation-circle"></i> -->
                             <small>Error message</small>
