--- a/police/policeman/trafficPolice/addDriverFine.html
+++ b/police/policeman/trafficPolice/addDriverFine.html
@@ -54,57 +54,39 @@
                         <h2>Add Fine</h2>
                     </div>
                     <form action="#" id="form" class="form">
+                        <!--Fine No will be auto incremented at Database-->
+                        <!--FineType will be taken from the session-->
+                        <!--UserID should be dynamically generated with JS based on fineType-->
                         <div class="form-control">
-                            <label for="name">Name</label>
-                            <input type="text" placeholder="eg: Suraif Muhammad" id="name" />
+                            <label for="user_id"></label>
+                            <input type="text" placeholder="" id="user_id" />
                             <!-- <i class="fas fa-check-circle"></i>
                             <i class="fas fa-exclamation-circle"></i> -->
                             <small>Error message</small>
                         </div>
                         <div class="form-control">
-                            <label for="police_id">Police_ID</label>
-                            <input type="text" placeholder="eg: 7109827" id="police_id" />
+                            <label for="offence_no">Offnece No</label>
+                            <input type="text" placeholder="eg: 25" id="offence_no" />
                             <!-- <i class="fas fa-check-circle"></i>
                             <i class="fas fa-exclamation-circle"></i> -->
                             <small>Error message</small>
                         </div>
                         <div class="form-control">
-                            <label for="nic">NIC</label>
-                            <input type="text" placeholder="eg: 200019292837" id="nic" />
+                            <label for="spot_description">Description</label>
+                            <input type="text" placeholder="eg: Explain the scenario" id="spot_description" />
                             <small>Error message</small>
                         </div>
-                        <div class="form-control">
-                            <label for="mobile_number">Mobile Number</label>
-                            <input type="number" placeholder="eg: 0766093011" id="mobile_number" />
-                            <small>Error message</small>
-                        </div>
-                        <div class="form-control">
-                            <label for="email">E=mail</label>
-                            <input type="email" placeholder="eg: suraifcoc16@gmail.com" id="email" />
-                            <small>Error message</small>
-                        </div>
-                        <div class="form-control">
-                            <label for="rankOptions">Rank</label>
-                            <div class="options" id="rankOptions">
-                                <div class="hide-option option" id="hide-rankOption">Select the rank</div>
-                            </div>
-                            <small>Error message</small>
-                        </div>
-                        <div class="form-control">
-                            <label for="police_stationOptions">Police Station</label>
-                            <div class="options" id="police_stationOptions">
-                                <div class="hide-option option" id="hide-police_stationOption">Select the Police Station</div>
-                                <!-- <i class="fas fa-check-circle"></i>
-                                <i class="fas fa-exclamation-circle"></i> -->
-                            </div>
-                            <small>Error message</small>
-                        </div>
+                        <!--Date and Time will be set by server-->
+                        <!--Relevent police_id and police_station will be retrieved from the session-->
+                        <!--Fine amount will be retrieved using offenceNumber-->
+                        <!--Paymentstatus will be set as pending by default in database-->
                         <button id="button">Submit</button>
                     </form>
                 </div>
             </div>
         </div>
-    <script src="../../resources/js/police/igp/addPoliceman.js"></script>
+    <script src="/resources/js/police/policeman/trafficPolice/addDriverFine.js"></script>
     <script src="/resources/js/login.js"></script>
+    <script src="/resources/js/police/policeman/trafficPolice/addFine.js"></script>
 </body>
 </html>
