--- a/police/policeman/trafficPolice/addFine.html
+++ b/police/policeman/trafficPolice/addFine.html
@@ -51,16 +51,16 @@
         <div class="container">
             <div class="cardContainer">
                 <div class="card">
-                  <a href="/police/policeman/trafficPolice/addDriverFine.html">
+                  <a href="/police/policeman/trafficPolice/addDriverFine.html" id="driverFine">
                     <h2>Driver</h2>
                   </a>
                 </div>
                 <div class="card">
-                    <a href="/police/policeman/trafficPolice/addPedestrianFine.html">
+                    <a href="/police/policeman/trafficPolice/addPedestrianFine.html" id="pedestrianFine">
                         <h2>Pedestrianr</h2>
                 </div>
                 <div class="card">
-                    <a href="/police/policeman/trafficPolice/addVehicleFine.html">
+                    <a href="/police/policeman/trafficPolice/addVehicleFine.html" id="vehicleFine">
                         <h2>Vehicle</h2>
                 </div>
               </div>
